--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@formspree/react": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
