--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "web-vitals": "^0.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite --port 3000",
+    "build": "vite build --outDir build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^2.0.0",
+    "vite": "^3.0.4"
   }
 }
