--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sandboxing",
+  "name": "sandbox",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -47,5 +47,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2"
   }
 }
